--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "water-profile-calculator",
   "description": "Water Profile Calculator",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": {
     "name": "Antti Leppä",
     "email": "antti.leppa@gmail.com"
@@ -15,12 +16,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.9.3",
-    "jest": "^25.2.7",
-    "ts-jest": "^25.3.1",
-    "ts-node": "^8.8.1",
-    "tslint": "^6.1.0",
-    "typescript": "^3.8.3"
+    "@types/jest": "^25.2.2",
+    "@types/node": "^14.0.1",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0",
+    "ts-node": "^8.10.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.2"
   }
 }
