--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "build-ts": "tsc",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
-  "dependencies": {},
+  "dependencies": {
+    "numeric": "^1.2.6"
+  },
   "devDependencies": {
     "@types/jest": "^25.2.2",
     "@types/node": "^14.0.1",
+    "@types/numeric": "^1.2.1",
     "jest": "^26.0.1",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
