--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "npm run build-ts && npm run tslint",
     "test": "jest --forceExit --coverage --verbose",
     "build-ts": "tsc",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "docs-md": "typedoc --plugin typedoc-plugin-markdown --out docs/md src"
   },
   "dependencies": {
     "numeric": "^1.2.6"
@@ -25,6 +26,8 @@
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
+    "typedoc": "^0.17.7",
+    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.9.2"
   }
 }
